--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -52,7 +52,7 @@ body {
   width: 100%;
   color: #fff;
   text-align: center;
-  font-size: rem(14);
+  font-size: rem(16);
   font-weight: 600;
   line-height: 1.42;
   border-radius: rem(4);
@@ -119,3 +119,4 @@ body {
     transform: translatey(0%);
   }
 }
+
